# wetlab

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml  deploy-altos-laminapp.yml  deploy-apps.yml  deploy-instance-apis.yml  deploy-lamindata-laminapp.yml  deploy.yml  doc-changes.yml
docs/: changelog.md  guide.md  index.md  reference.md
docs/guide/: 01-get-started.ipynb  02-orms.ipynb  10-migrate.ipynb  get-started.ipynb  get-started.md  index.md  modeling_perturbations.ipynb  pert-curator.ipynb  pert-registries.ipynb
lnschema_lamin1/: __init__.py  _core.py  _link.py  ids.py  link.py  models.py  types.py
lnschema_lamin1/dev/: __init__.py  _id.py  _type.py  _versions.py  id.py  type.py
lnschema_lamin1/migrations/: 0001_initial.py  0001_initial_squashed_0012.py  0002_alter_biosample_options_alter_experiment_options_and_more.py  0003_alter_biosample_created_by_and_more.py  0004_remove_treatment_target_genes_treatmenttarget_and_more.py  0005_alter_treatmenttarget_created_by_and_more.py  0006_remove_treatment_target_treatment_targets.py  0007_rename_batch_name_biosample_batch_and_more.py  0008_platewell_delete_well.py  0009_alter_platewell_id.py  0010_rename_platewell_well.py  0011_migrate_to_integer_pks.py  0012_export_legacy_data.py  0013_import_legacy_data.py  0014_rename_species_biosample_organism.py  0015_rename_files_biosample_artifacts_and_more.py  0016_rename_datasets_biosample_collections_and_more.py  0017_remove_biosample_artifacts.py
pertdb/: __init__.py  models.py
pertdb/migrations/: 0001_initial.py  0002_squashed.py  0025_squashed.py  0026_alter_biosample_artifacts_alter_techsample_artifacts.py  0027_rename_treatment_add_donor.py  0028_remove_combinationperturbation_compounds_and_more.py  0029_artifactbiologic_biologic_artifactbiologic_biologic.py  0030_lamindbv1.py  0031_alter_biologic_space_alter_biosample_space_and_more.py  0034_lamindbv1_part6.py  (+19 more)
tests/: conftest.py  test_integrity.py  test_notebooks.py  test_smiles_normalization.py
wetlab/: __init__.py  _pert_curator.py  models.py  types.py
(+87 files in other folders)
