[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wetlab"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "lamindb[bionty]",
]

[project.urls]
Home = "https://github.com/laminlabs/wetlab"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject_test>=0.4.1",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "wetlab/*",
]
